<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenPeerSampleApp</string>
    <string name="menu_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search contacts</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_contacts">Contacts</string>
    <string name="label_send">Send</string>
    <string name="hint_message">Message</string>
    <string name="hint_call">Call</string>
    <string name="hint_invite">Invite</string>
    <string name="hint_compose">Say something</string>
    <string name="label_endcall">End call</string>
    <string name="label_answer">Answer</string>
    <string name="label_decline">Decline</string>
    <string name="label_hold">Hold</string>
    <string name="label_unhold">Unhold</string>
    <string name="label_hangup">hangup</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <!-- Beginning of call state strings -->
    <string name="CallState_Preparing">Preparing</string>
    <string name="CallState_Incoming">Incoming</string>
    <string name="CallState_Placed">Calling</string>
    <string name="CallState_Ringing">Ringing</string>
    <string name="CallState_Ringback">Ringing</string>
    <string name="CallState_Open">In progress</string>
    <string name="CallState_Active">Active</string>
    <string name="CallState_Inactive">Idle</string>
    <string name="CallState_Hold">On hold</string>
    <string name="CallState_Closing">Hanging up</string>
    <string name="CallState_Closed">Ended</string>
    <!-- End of call state strings -->

    <string name="logger_settings">Logger Settings</string>
    <string name="out_telnet_logger">Outgoing telnet logger</string>
    <string name="local_telnet_logger">Local telnet logger</string>
    <string name="file_logger">File logger</string>
    <string name="no_recent_chats">You do not have any active chats! Why not go ahead and start one?</string>
    <string name="label_start_chat">Start Chat</string>
    <string name="menu_done">Done(%s)</string>
    <string name="label_chat">Chat</string>
    <string name="label_select_contact">Select friends</string>
    <string name="label_new_message_received">New message received</string>
    <string name="label_chats">Chats</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_favorites">Favorites</string>

    <!-- beginning of settings strings -->
    <string name="label_about">About</string>
    <string name="label_version">Version</string>
    <string name="label_build">Build</string>
    <string name="legal_info">Legal Information</string>
    <string name="ringtone_select">Select Ringtone</string>
    <string name="notification_sound_switch">Message notification</string>
    <string name="notification_sound_select">Select Notification Sound</string>
    <string name="signout">Sign out</string>
    <!-- End of setting strings -->

    <string name="msg_typing">%s is typing…</string>
    <string name="msg_inactive">%s is contemplating navel…</string>
    <string name="msg_deleted">This message has been deleted</string>
    <string name="label_read">Read</string>
    <string name="label_delivered">Delivered</string>
    <string name="label_sent">Sent</string>
    <!-- beginning of login strings -->
    <string name="msg_failed_login">Failed to login, try again later.</string>
    <string name="msg_not_logged_in">You\'re not logged in. Please quit the app and relogin.</string>
    <string name="msg_cannot_signout_with_call">You have active calls. Please hangup calls before signout</string>
    <string name="msg_account_login_completed">Account login completed</string>
    <string name="msg_account_login_started">Account Login Started, please don\'t close the app!</string>
    <string name="msg_identity_login_started">Identity Login Started, please don\'t close the app!</string>
    <string name="msg_identity_login_completed">Identity login completed! </string>
    <!-- End of login strings -->
    <string name="label_participants">Participants</string>
    <string name="msg_no_contacts_found">No contacts found</string>
    <string name="label_new_conversation">Create new thread</string>
</resources>